# ozymem-partnet

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  init-ozymem.ps1  init-ozymem.sh  setup.sh  start-ozymem.ps1
.github/workflows/: ci.yml  docker.yml
crates/ozymem-cli/: Cargo.toml
crates/ozymem-cli/src/: main.rs  mcp.rs
crates/ozymem-core/: Cargo.toml
crates/ozymem-core/src/: fs_utils.rs  lib.rs  mcp_common.rs
crates/ozymem-core/tests/: integration_test.rs
crates/ozymem-parser/: Cargo.toml
crates/ozymem-parser/src/: dependency_resolution.rs  lib.rs
crates/ozymem-parser/tests/: integration_test.rs
crates/ozymem-server/: Cargo.toml
crates/ozymem-server/src/: main.rs
docs/: mcp_setup_guide.md
