[workspace]
members = [
    "crates/ozymem-core",
    "crates/ozymem-parser",
    "crates/ozymem-cli",
    "crates/ozymem-server",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
neo4rs = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-rust = "0.24.2"
walkdir = "2"
async-trait = "0.1"
