[package]
name = "ozymem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
neo4rs.workspace = true
ozymem-parser = { path = "../ozymem-parser" }
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
