[package]
name = "ozymem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
neo4rs.workspace = true
ozymem-parser = { path = "../ozymem-parser" }
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
serde_json = "1.0"
rand = "0.8"


